feat: 복지시설 종류 분리 및 저장 작업 추가
기존: 장애인 사회복지시설(마포구) ->
- 장애인 사회복지시설 기타
- 장애인 거주시설
- 장애인 지역사회재활시설
- 장애인 직업재활시설
- 장애인 의료재활시설
총 5가지로 분류했다.